--- a/LearnNextjs/first-project/src/app/globals.css
+++ b/LearnNextjs/first-project/src/app/globals.css
@@ -88,8 +88,10 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
-body {
+h1 {
+  background-color: red;
+}
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -97,7 +99,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 a {
   color: inherit;
