--- a/LearnNextjs/first-project/src/app/globals.css
+++ b/LearnNextjs/first-project/src/app/globals.css
@@ -91,6 +91,13 @@ body {
 h1 {
   background-color: red;
 }
+
+/* font-family: Lato;
+font-size: 36px;
+font-weight: 400;
+line-height: 43.2px;
+text-align: center; */
+
 /* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
